devops/businessservice/Ingress/nginxUi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.60.0.4,10.60.160.4,10.210.0.10,10.250.0.6,10.250.0.5,10.250.0.4
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: ui-ingress
spec:
  rules:
  - host: services-00.aks-ingress.acc2.ct2.atos.net
    http:
      paths:
      - backend:
          service:
            name: uimanagement-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - services-00.aks-ingress.acc2.ct2.atos.net
